--- a/latex/final-project.tex
+++ b/latex/final-project.tex
@@ -44,7 +44,8 @@ rightmargin=10pt
 \item General Description
 
 blah blah blah \\
-testing doing this locally i guess if it compiles, it compiles
+testing doing this locally i guess if it compiles, it compiles \\
+testing again
 
 \item Grammar for the Language
 
