--- a/latex/final-project.tex
+++ b/latex/final-project.tex
@@ -50,10 +50,13 @@ testing again
 \item Grammar for the Language
 
 Placeholder Grammar:
+S is the initial variable for the beginning of a combo
+%we should use a symbol to denote "hold button". I will use \mu for now
 \begin{align*}
-&S \rightarrow aSb \, | \, X \\
-&X \rightarrow cXd \, | \, cYd \\
-&Y \rightarrow aYb \, | \, ab 
+&S \rightarrow (Y_1) \, | \, (B_1) \, | \, \bar{(R_1)} \, | \, A \, | \, \bar{(L_2)} \, | \, (L+Y)\\
+&Y_1 \rightarrow (Y_2) \, | \, (B_1) \, | \, \bar{(R_1)} \, | \, (Y+B) \\
+&Y_2 \rightarrow (Y_3) \, | \, (B_1) \, | \, \bar{(R_1)} \, | \, (Y+B) \\
+&Y_3 \rightarrow (B_1) \, | \, \bar{(R_1)}  \, | \, (Y+B) \, | \, (\bar{R_1}+Y+B) \\
 \end{align*}
 
 \item Automaton
