--- a/latex/final-project.tex
+++ b/latex/final-project.tex
@@ -86,39 +86,39 @@ Move Name for each State (Paired together for general buttons/functionality): \\
 S is the initial variable for the beginning of a combo
 %we should use a symbol to denote "hold button". I will use \mu for now
 \begin{align*}
-&S \rightarrow yq_{os1} \, | \, bq_{bb1} \, | \, r_2q_{c1} \, | \, (l_2r_1)q_{fben} \, | \, (l_2r_1)q_{fbew1} \, | \, (ly)q_{ss} \, | \, \lambda \\
+&S \rightarrow yq_{os1} \, | \, bq_{bb1} \, | \, rq_{c1} \, | \, fq_{fben} \, | \, fq_{fbew1} \, | \, yq_{ss} \, | \, \lambda \\
 %basic side smash/overhead 1 --> overhead 2 --> overhead 3
-&q_{ss} \rightarrow yq_{os2} \, | \, b{q_bb1} \, | \, r_2q_{c1} \, | \, (yb)q_{sb1} \, | \, S\\
-&q_{os1} \rightarrow yq_{os2} \, | \, b{q_bb1} \, | \, r_2q_{c1} \, | \, (yb)q_{sb1} \, | \, S\\
-&q_{os2} \rightarrow yq_{u} \, | \, b{q_bb1} \, | \, r_2q_{c1} \, | \, (yb)q_{sb1} \, | \, S\\
-&q_{u} \rightarrow bq_{bb1} \, | \, r_2q_{c1} \, | \,(yb)q_{sb1} \, | \, (r_2yb)q_{mc1} \, | \, S\\
+&q_{ss} \rightarrow yq_{os2} \, | \, b{q_bb1} \, | \, rq_{c1} \, | \, cq_{sb1} \, | \, S\\
+&q_{os1} \rightarrow yq_{os2} \, | \, b{q_bb1} \, | \, rq_{c1} \, | \, cq_{sb1} \, | \, S\\
+&q_{os2} \rightarrow yq_{u} \, | \, b{q_bb1} \, | \, rq_{c1} \, | \, cq_{sb1} \, | \, S\\
+&q_{u} \rightarrow bq_{bb1} \, | \, rq_{c1} \, | \,cq_{sb1} \, | \, dq_{mc1} \, | \, S\\
 %big bang
-&q_{bb1} \rightarrow bq_{bb2} \, | \, r_2q_{c1} \, | \, S \\ 
-&q_{bb2} \rightarrow bq_{bb3} \, | \, r_2q_{c1} \, | \, S \\ 
-&q_{bb3} \rightarrow bq_{bb4} \, | \, r_2q_{c1} \, | \, S \\ 
-&q_{bb4} \rightarrow bq_{bbf} \, | \, (r_2yb)q_{mc1} \, | \, r_2q_{c1} \, | \, S \\ 
-&q_{bbf} \rightarrow r_2q_{c1} \, | \, (yb)q_{sb1} \, | \, S \\ 
+&q_{bb1} \rightarrow bq_{bb2} \, | \, rq_{c1} \, | \, S \\ 
+&q_{bb2} \rightarrow bq_{bb3} \, | \, rq_{c1} \, | \, S \\ 
+&q_{bb3} \rightarrow bq_{bb4} \, | \, rq_{c1} \, | \, S \\ 
+&q_{bb4} \rightarrow bq_{bbf} \, | \, dq_{mc1} \, | \, rq_{c1} \, | \, S \\ 
+&q_{bbf} \rightarrow rq_{c1} \, | \, cq_{sb1} \, | \, S \\ 
 %spinning bludgeon. S needs to be checked. 
 &q_{sb1} \rightarrow q_{sb2} \, | \, yS \\ 
 &q_{sb2} \rightarrow q_{sb3} \, | \, yS \\ 
 &q_{sb3} \rightarrow S \, | \, yS \\ 
 %charge
-&q_{c1} \rightarrow q_{c2} \, | \,  r_2q_{csb} \, | \, yq_{csb} \, | \, bq_{cs1} \, | \, (l_2r_1)q_{fben} \, | \, (l_2r_1)q_{fbew1}\\ 
-&q_{c2} \rightarrow q_{c3} \, | \,  r_2q_{csu} \, | \, yq_{csu} \, | \, bq_{cs2} \, | \, (l_2r_1)q_{fben} \, | \, (l_2r_1)q_{fbew1}\\ 
-&q_{c3} \rightarrow r_2q_{cbb} \, | \,  yq_{cbb} \, | \, bq_{cs3} \, | \, (yb)q_{sb1} \, | \, (l_2r_1)q_{fben} \, | \, (l_2r_1)q_{fbew1}\ \\ 
-&q_{csb} \rightarrow yq_{cfu} \, | \,  bq_{ss} \, | \, r_2q_{c1} \, | \, S \\ 
-&q_{cu} \rightarrow yq_{cfu} \, | \,  bq_{bb1} \, | \, r_2q_{c1} \, | \, (yb)q_{sb1} \, | \, S \\ 
-&q_{cbb} \rightarrow r_2q_{c1} \, | \,  (yb)q_{sb1} \, | \, yq_{os1} \, | \, bq_{bb1} \, | \, (ly)q_{ss} \, | \, S \\ 
-&q_{cfu} \rightarrow yq_{os1} \, | \,  bq_{bb1} \, | \, r_2q_{c1} | \, (yb)q_{sb1} \, | \, S\\ 
+&q_{c1} \rightarrow q_{c2} \, | \,  rq_{csb} \, | \, yq_{csb} \, | \, bq_{cs1} \, | \, fq_{fben} \, | \, fq_{fbew1}\\ 
+&q_{c2} \rightarrow q_{c3} \, | \,  rq_{csu} \, | \, yq_{csu} \, | \, bq_{cs2} \, | \, fq_{fben} \, | \, fq_{fbew1}\\ 
+&q_{c3} \rightarrow rq_{cbb} \, | \,  yq_{cbb} \, | \, bq_{cs3} \, | \, cq_{sb1} \, | \, fq_{fben} \, | \, fq_{fbew1}\ \\ 
+&q_{csb} \rightarrow yq_{cfu} \, | \,  bq_{ss} \, | \, rq_{c1} \, | \, S \\ 
+&q_{cu} \rightarrow yq_{cfu} \, | \,  bq_{bb1} \, | \, rq_{c1} \, | \, cq_{sb1} \, | \, S \\ 
+&q_{cbb} \rightarrow rq_{c1} \, | \,  cq_{sb1} \, | \, yq_{os1} \, | \, bq_{bb1} \, | \, yq_{ss} \, | \, S \\ 
+&q_{cfu} \rightarrow yq_{os1} \, | \,  bq_{bb1} \, | \, rq_{c1} | \, cq_{sb1} \, | \, S\\ 
 %mighty charge (release is omitted)
 &q_{mc1} \rightarrow q_{mc2} \, | \, l_2q_{mcu} \, | \, yq_{mcu}\\
 &q_{mc2} \rightarrow l_2q_{mcs} \, | \, yq_{mcs}\\
-&q_{mcu} \rightarrow yq_{os1} \, | \, (ly)q_{ss} \, | \, bq_{bb1} \, | \, (yb)q_{sb1} \, | \, S\\
-&q_{mcs} \rightarrow (yb)q_{sb1} \, | \, yq_{os1} \, | \, (ly)q_{ss} \, | \, bq_{bb1}\, | \, S\\
+&q_{mcu} \rightarrow yq_{os1} \, | \, yq_{ss} \, | \, bq_{bb1} \, | \, cq_{sb1} \, | \, S\\
+&q_{mcs} \rightarrow cq_{sb1} \, | \, yq_{os1} \, | \, yq_{ss} \, | \, bq_{bb1}\, | \, S\\
 %focus strike/charge. when not hitting a wound, shows B | R_2
-&q_{fben} \rightarrow bq_{bb1} \, | \, r_2q_{c1} \, | \, S\\
-&q_{fbew1} \rightarrow r_2q_{c1} \, | \, q_{fbew2} \\
-&q_{fbew2} \rightarrow r_2q_{c1} \, | \, yq_{os2} \, | \, S\\
+&q_{fben} \rightarrow bq_{bb1} \, | \, rq_{c1} \, | \, S\\
+&q_{fbew1} \rightarrow rq_{c1} \, | \, q_{fbew2} \\
+&q_{fbew2} \rightarrow rq_{c1} \, | \, yq_{os2} \, | \, S\\
 \end{align*}
 
 \newpage
@@ -140,9 +140,9 @@ S is the initial variable for the beginning of a combo
         (S) edge[above] node{$y$} (qss)
         (S) edge[above] node{$y$} (qos1)
         (S) edge[left] node{$b$} (qbb1)
-        (S) edge[right] node{$r_2$} (qc1)
-        (S) edge[right] node{\scriptsize $(l_2r_1)$} (qfben)
-        (S) edge[right] node{\scriptsize $(l_2r_1)$} (qfbew1)
+        (S) edge[right] node{$r$} (qc1)
+        (S) edge[right] node{\scriptsize $f$} (qfben)
+        (S) edge[right] node{\scriptsize $f$} (qfbew1)
         (S) edge[right, loop right] node{$placeholder$} (S);
     \end{tikzpicture}
     \caption{Automaton for Language}
