--- a/latex/final-project.tex
+++ b/latex/final-project.tex
@@ -128,6 +128,7 @@ S is the initial variable for the beginning of a combo
 \end{align*}
 
 \newpage
+\newgeometry{left=0.5in, right=0.5in, top=0.5in, bottom=0.5in}
 \item Automaton
 
 \begin{center}
@@ -136,17 +137,40 @@ S is the initial variable for the beginning of a combo
     \centering
     \begin{tikzpicture}
         \node[state, initial above](S){$S$};
-        \node[state, accepting, below left of=S, yshift=-1cm, xshift=0.5cm](qbb1){$q_{bb1}$};
-        \node[state, accepting, left of=qbb1](qos1){$q_{os1}$};
-        \node[state, accepting, left of=qos1](qss){$q_{ss}$};
-        \node[state, accepting, below right of=S, yshift=-1cm, xshift=-0.5cm](qc1){$q_{c1}$};
-        \node[state, accepting, right of=qc1](qfben){$q_{fben}$};
+        \node[state, accepting, below left of=S, yshift=-1cm, xshift=0.5cm](qos1){$q_{os1}$};
+        \node[state, accepting, below of=qos1](qos2){$q_{os2}$};
+        \node[state, accepting, below of=qos2](qu){$q_{u}$};
+        \node[state, accepting, left of=qos1](qbb1){$q_{bb1}$};
+        \node[state, accepting, below of=qbb1](qbb2){$q_{bb2}$};
+        \node[state, accepting, below of=qbb2](qbb3){$q_{bb3}$};
+        \node[state, accepting, below of=qbb3](qbb4){$q_{bb4}$};
+        \node[state, accepting, below of=qbb4](qbbf){$q_{bbf}$};
+        \node[state, accepting, below right of=S, yshift=-1cm, xshift=-0.5cm](qss){$q_{ss}$};
+        \node[state, accepting, below of=qss](qc1){$q_{c1}$};
+        \node[state, accepting, below of=qc1](qc2){$q_{c2}$};
+        \node[state, accepting, below of=qc2](qc3){$q_{c3}$};
+        \node[state, accepting, right of=qc1](qcsb){$q_{csb}$};
+        \node[state, accepting, right of=qc2](qcu){$q_{cu}$};
+        \node[state, accepting, right of=qc3](qcbb){$q_{cbb}$};
+        \node[state, accepting, right of=qcu](qcfu){$q_{cfu}$};
+        \node[state, accepting, left of=qc3](qmc1){$q_{mc1}$};
+        \node[state, accepting, below of=qmc1](qmc2){$q_{mc2}$};
+        \node[state, accepting, below of=qmc2](qmcs){$q_{mcs}$};
+        \node[state, accepting, left of=qmcs](qmcu){$q_{mcu}$};
+        \node[state, accepting, below of=qc3](qsb1){$q_{sb1}$};
+        \node[state, accepting, right of=qsb1](qsb2){$q_{sb2}$};
+        \node[state, accepting, right of=qsb2](qsb3){$q_{sb3}$};
+        \node[state, accepting, below of=qsb1](qsss){$q_{sss}$};
+        \node[state, accepting, below of=qsb2](qsfu){$q_{sfu}$};
+        \node[state, accepting, below of=qsb3](qssu){$q_{ssu}$};
+        \node[state, accepting, right of=qss](qfben){$q_{fben}$};
         \node[state, accepting, right of=qfben](qfbew1){$q_{fbew1}$};
+        \node[state, accepting, below of=qfbew1](qfbew2){$q_{fbew2}$};
         \draw 
         (S) edge[above] node{$y$} (qss)
         (S) edge[above] node{$y$} (qos1)
         (S) edge[left] node{$b$} (qbb1)
-        (S) edge[right] node{$r$} (qc1)
+        (S) edge[left] node{$r$} (qc1)
         (S) edge[right] node{\scriptsize $f$} (qfben)
         (S) edge[right] node{\scriptsize $f$} (qfbew1)
         (S) edge[right, loop right] node{$placeholder$} (S);
@@ -157,6 +181,7 @@ S is the initial variable for the beginning of a combo
 
 \end{center}
 
+\restoregeometry
 \newpage
 \item Data Structure
 
