--- a/latex/final-project.tex
+++ b/latex/final-project.tex
@@ -153,7 +153,7 @@ S is the initial variable for the beginning of a combo
         \node[state, accepting, right of=qc2](qcu){$q_{cu}$};
         \node[state, accepting, right of=qc3](qcbb){$q_{cbb}$};
         \node[state, accepting, right of=qcu](qcfu){$q_{cfu}$};
-        \node[state, accepting, left of=qc3](qmc1){$q_{mc1}$};
+        \node[state, accepting, below of=qu](qmc1){$q_{mc1}$};
         \node[state, accepting, below of=qmc1](qmc2){$q_{mc2}$};
         \node[state, accepting, below of=qmc2](qmcs){$q_{mcs}$};
         \node[state, accepting, left of=qmcs](qmcu){$q_{mcu}$};
@@ -167,12 +167,38 @@ S is the initial variable for the beginning of a combo
         \node[state, accepting, right of=qfben](qfbew1){$q_{fbew1}$};
         \node[state, accepting, below of=qfbew1](qfbew2){$q_{fbew2}$};
         \draw 
-        (S) edge[above] node{$y$} (qss)
-        (S) edge[above] node{$y$} (qos1)
-        (S) edge[left] node{$b$} (qbb1)
-        (S) edge[left] node{$r$} (qc1)
+        (S) edge[above] node{\scriptsize $y$} (qss)
+        (S) edge[above] node{\scriptsize $y$} (qos1)
+        (S) edge[left] node{\scriptsize $b$} (qbb1)
+        (S) edge[left] node{\scriptsize $r$} (qc1)
         (S) edge[right] node{\scriptsize $f$} (qfben)
-        (S) edge[right] node{\scriptsize $f$} (qfbew1)
+        (S) edge[above] node{\scriptsize $f$} (qfbew1)
+        (qfbew1) edge[right] node{\scriptsize $\lambda$} (qfbew2)
+        (qos1) edge[right] node{\scriptsize $y$} (qos2)
+        (qos2) edge[right] node{\scriptsize $y$} (qu)
+        (qu) edge[right] node{\scriptsize $d$} (qmc1)
+        (qbb1) edge[right] node{\scriptsize $b$} (qbb2)
+        (qbb2) edge[right] node{\scriptsize $b$} (qbb3)
+        (qbb3) edge[right] node{\scriptsize $b$} (qbb4)
+        (qbb4) edge[right] node{\scriptsize $b$} (qbbf)
+        (qc1) edge[right] node{\scriptsize $\lambda$} (qc2)
+        (qc2) edge[right] node{\scriptsize $\lambda$} (qc3)
+        (qc1) edge[above] node{\scriptsize $r$} (qcsb)
+        (qc2) edge[above] node{\scriptsize $r$} (qcu)
+        (qc3) edge[above] node{\scriptsize $r$} (qcbb)
+        (qcsb) edge[above] node{\scriptsize $y$} (qcfu)
+        (qcu) edge[above] node{\scriptsize $y$} (qcfu)
+        (qcbb) edge[above] node{\scriptsize $y$} (qcfu)
+        (qc3) edge[above] node{\scriptsize $c$} (qmc1)
+        (qmc1) edge[right] node{\scriptsize $\lambda$} (qmc2)
+        (qmc1) edge[right] node{\scriptsize $r, y$} (qmcu)
+        (qmc2) edge[right] node{\scriptsize $r, y$} (qmcs)
+        (qcfu) edge[above, bend left] node{\scriptsize $c$} (qsb1)
+        (qsb1) edge[above] node{\scriptsize $\lambda$} (qsb2)
+        (qsb2) edge[above] node{\scriptsize $\lambda$} (qsb3)
+        (qsb1) edge[right] node{\scriptsize $y$} (qsss)
+        (qsb2) edge[right] node{\scriptsize $y$} (qsfu)
+        (qsb3) edge[right] node{\scriptsize $y$} (qssu)
         (S) edge[right, loop right] node{$placeholder$} (S);
     \end{tikzpicture}
     \caption{Automaton for Language}
